--- a/src/App/App.css
+++ b/src/App/App.css
@@ -11,6 +11,10 @@
 .pane {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #6ad14b solid;
 }
 
 .App-logo {
