--- a/src/components/tilePane/view/Provider/config/PreBox/style.module.css
+++ b/src/components/tilePane/view/Provider/config/PreBox/style.module.css
@@ -6,3 +6,7 @@
   background: #35cf9457;
   transition: cubic-bezier(0.5, 0.1, 0.165, 1) 233ms;
 }
+.noPreBox {
+  background: #ffffff00;
+  transition: cubic-bezier(0.5, 0.1, 0.165, 1) 233ms;
+}
