--- a/src/components/tilePane/view/Provider/config/TabBar/style.module.css
+++ b/src/components/tilePane/view/Provider/config/TabBar/style.module.css
@@ -1,7 +1,9 @@
 .tabTitle {
+  flex-grow: 1;
   color: #000000;
 }
 .tabTitleOff {
+  flex-grow: 1;
   color: #7e7e7e;
 }
 .tabBar {
@@ -10,5 +12,33 @@
   height: 100%;
   justify-content: space-around;
   box-shadow: 0px 1px 3px 0px #889c9683;
-  background: #d1faec;
+}
+.tab {
+  border: 1px solid #889c964f;
+  width: 100%;
+  height: 100%;
+  background: #ebfff8;
+}
+.tabMoving {
+  border: solid 1px #002c1d;
+  border-radius: 4px;
+  background: #d3fff0;
+}
+
+.tabInner {
+  display: flex;
+  align-items: center;
+}
+
+.tabInner:hover .off {
+  background: rgb(255, 180, 180);
+}
+.off {
+  transition: 233ms;
+  flex-grow: 0;
+  width: 14px;
+  height: 14px;
+  border-radius: 20px;
+  margin-right: 10px;
+  cursor: pointer;
 }
