--- a/src/components/tilePane/view/Provider/config/TabBar/style.module.css
+++ b/src/components/tilePane/view/Provider/config/TabBar/style.module.css
@@ -1,44 +1,63 @@
 .tabTitle {
+  height: 100%;
   flex-grow: 1;
-  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.tabTitleOff {
-  flex-grow: 1;
-  color: #7e7e7e;
-}
+
 .tabBar {
   display: flex;
   width: 100%;
   height: 100%;
   justify-content: space-around;
-  box-shadow: 0px 1px 3px 0px #889c9683;
 }
 .tab {
-  border: 1px solid #889c964f;
   width: 100%;
   height: 100%;
-  background: #ebfff8;
 }
 .tabMoving {
+  padding: 0.3em 1em;
   border: solid 1px #002c1d;
   border-radius: 4px;
-  background: #d3fff0;
+  background: #f5ffd3;
 }
 
 .tabInner {
+  height: 100%;
   display: flex;
   align-items: center;
+  color: #000000;
+}
+.tabInnerOff {
+  height: 100%;
+  border-left: 1px solid #d1d1d18f;
+  border-bottom: 1px solid #b9b9b98f;
+  border-right: 1px solid #8787878f;
+  background: #e9e9e9;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0px 1px 5px 2px #cfcfcf9c;
 }
 
 .tabInner:hover .off {
-  background: rgb(255, 180, 180);
+  opacity: 1;
+}
+
+.tabInnerOff:hover .off {
+  opacity: 1;
 }
 .off {
   transition: 233ms;
   flex-grow: 0;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   width: 14px;
+  font-size: 1.2em;
   height: 14px;
-  border-radius: 20px;
   margin-right: 10px;
   cursor: pointer;
 }
