✨feat(proBox): config in tab bar

--- a/src/components/tilePane/view/Provider/config/PreBox/style.module.css
+++ b/src/components/tilePane/view/Provider/config/PreBox/style.module.css
@@ -2,6 +2,10 @@
   background: #23c6cc57;
   transition: cubic-bezier(0.5, 0.1, 0.165, 1) 233ms;
 }
+.preBoxInTab {
+  background: #23c6cc;
+  transition: cubic-bezier(0.5, 0.1, 0.165, 1) 233ms;
+}
 .preBranch {
   background: #35cf9457;
   transition: cubic-bezier(0.5, 0.1, 0.165, 1) 233ms;
