--- a/src/static/style.css
+++ b/src/static/style.css
@@ -27,6 +27,8 @@
   display: flex;
   align-items: center;
   color: #000000;
+  background: #ffffff;
+  color: #000000;
 }
 .react-tile-pane-tabInnerOff {
   height: 100%;
@@ -34,6 +36,7 @@
   border-bottom: 1px solid #b9b9b98f;
   border-right: 1px solid #8787878f;
   background: #e9e9e9;
+  color: #000000;
   display: flex;
   align-items: center;
   box-shadow: inset 0px 1px 5px 2px #cfcfcf9c;
